# T2

./: .gitignore  HPIR_changes.patch  README.md  pyproject.toml  run_diagnostic.py  run_pilot.py
hart-table-retrieval/: .gitignore  README.md  pyproject.toml
hart-table-retrieval/configs/: experiment.yaml
hart-table-retrieval/docs/: RESUME_PROMPT.md  routing_explanation.md
hart-table-retrieval/notebooks/: complexity_analysis.py
hart-table-retrieval/results/: ablation_summary.csv  answer_accuracy.json  answer_accuracy_rescored.json  evaluation_summary.csv  failure_modes.json  full_baseline_no_ce.json  full_baseline_with_ce.json  hard_query_eval.json  hard_query_eval_v2.json  header_path_bge_large_en_v1_5_0.0.json  header_path_bge_large_en_v1_5_0.2.json  header_path_bge_large_en_v1_5_0.4.json  header_path_bge_large_en_v1_5_0.6.json  header_path_bge_large_en_v1_5_0.8.json  header_path_bge_large_en_v1_5_1.0.json  header_path_multilingual_e5_large_instruct_0.0.json  header_path_multilingual_e5_large_instruct_0.2.json  header_path_multilingual_e5_large_instruct_0.4.json  header_path_multilingual_e5_large_instruct_0.6.json  header_path_multilingual_e5_large_instruct_0.8.json  header_path_multilingual_e5_large_instruct_1.0.json  indexing_stats.json  json_kv_bge_large_en_v1_5_0.0.json  json_kv_multilingual_e5_large_instruct_0.0.json  plain_markdown_bge_large_en_v1_5_0.0.json  plain_markdown_multilingual_e5_large_instruct_0.0.json  token_length_analysis.csv  v2_eval_cerebras30.json  v2_eval_cerebras30_defaultgamma.json  v2_eval_groq100.json  v2_eval_groq100_v2fix.json  v2_eval_mock.json  verifier_eval.json  verifier_eval_header_path.json  verifier_eval_json_kv.json
hart-table-retrieval/scripts/: run_ablation.py  run_e2e_test.py  run_evaluation.py  run_hard_query_eval.py  run_indexing.py  run_retrieval.py  sidecar_architecture.py  token_length_control.py
hart-table-retrieval/sidecar_verifier/: README.md  demo.py  target_adapter.py
rag-agent/: .gitignore  DEMO_QUERIES.md  EXPERIMENTS.md  NEXT.md  README.md  RESUME-2026-07-23.md  RESUME-2026-07-24.md  RESUME-2026-07-25.md  STATE.md  pyproject.toml  발표스크립트.md
rag-agent/configs/: ablation_no_symbolic.yaml  ablation_no_verify.yaml  ablation_oracle_retrieval.yaml  decomposition.yaml  decomposition_oracle.yaml  hpir.yaml  prep.yaml  v3.1_baseline.yaml
rag-agent/docs/: CITATIONS_VERIFIED.md  DATA.md  DIAGNOSIS.md  F2F4_PROTOCOL.md  FAILURE_ANALYSIS.md  LAB_MEETING_BRIEF.md  METHOD_HPIR.md  METHOD_PROPOSAL.md  METHOD_SC.md  NEXT_SESSION_PROMPT.md  OPERAND_RAG.md  PAPER_DRAFT.md  PAPER_OUTLINE.md  PIPELINE.md  PLAN_reconstruction_accuracy.md  PREP_PROTOCOL.md  PREP_SURVEY.md  RECONSTRUCTION.md  RECONSTRUCTION_VALIDITY.md  RELATED_DELTA.md  RESULTS.md  RESUME_PROMPT.md  RETRIEVAL_STAGE.md  SESSION_2026-07-20.md  SESSION_2026-07-22.md  THESIS_OUTLINE.md  VERDICT.md  e7_retrieval_ablation_design.md  e8_ohd_baseline_design.md  fig0_experiment_overview.drawio  fig_cell_localization.drawio  hierarchical_table_example.html  leakage_note.md  related_methods_study.md  retrieval_algorithms_study.md  sentence_accuracy_table.html  결과_요약.md
rag-agent/rag_agent/: __init__.py  agent.py
rag-agent/results/: ablation_adaptive.json  ablation_always_code.json  ablation_gold_ceiling.json  ablations_summary.json  aitqa_col_bench.json  answer_accuracy_injection_70b.json  answer_accuracy_injection_70b_records.jsonl  answer_accuracy_injection_70b_v2.json  answer_accuracy_injection_70b_v2_records.jsonl  answer_accuracy_injection_8b_v2.json  answer_accuracy_injection_8b_v2_records.jsonl  answer_accuracy_injection_gptoss120b_records.jsonl  answer_accuracy_injection_gptoss120b_v2.json  answer_accuracy_injection_gptoss120b_v2_records.jsonl  answer_accuracy_injection_summary.md  answer_eval.json  answer_eval_bge_groq.json  cell_cases_for_review.md  cell_omission_dev_bge-small.json  cell_recall_raw.jsonl  cell_recall_stats.json  cell_sample_flat.json  cell_sample_hier.json  codegen_eval.json  codegen_eval_adaptive_n10.json  codegen_eval_adaptive_n5.json  codegen_eval_adaptive_n50.json  codegen_eval_always-direct_n100.json  codegen_eval_gold-table-codegen_n10.json  col_select_bench.json  col_select_bench_bge.json  corpus_cell_recall_hitab_bm25.json  corpus_cell_recall_hitab_dense.json  corpus_table_recall.json  dense_ceiling_diag.json  diag_flat_test.json  (+170 more)
(+362 files in other folders)
