# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "table-rag-structural-audit"
version = "0.1.0"
description = "Reproducible pipeline for diagnosing table-structure loss in RAG serialization and probing embedder geometry."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Author" }]
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<2",
    "scipy>=1.12,<2",
    "scikit-learn>=1.4,<2",
    "sentence-transformers>=3.0,<4",
    "transformers>=4.40,<5",
    "torch>=2.3,<3",
    "docling>=2.0,<3",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.1,<6",
    "html5lib>=1.1,<2",
    "apted>=1.0.3,<2",
    "zss>=1.2,<2",
    "hydra-core>=1.3,<2",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.4,<1",
    "pyright>=1.1,<2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "RUF",  # ruff-specific
]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
