[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hart-table-retrieval"
version = "0.1.0"
description = "HART: Header-Aware Retrieval for Tables"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "sentence-transformers",
    "openai",
    "chromadb",
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "tqdm",
    "jsonlines",
    "pyyaml",
    "rank_bm25",
    "tiktoken",
    "matplotlib",
    "tenacity",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
