# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-agent"
version = "0.3.1"
description = "Adaptive table-RAG agent over HiTab — routing between a vector index and the original 2-D structure."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jax0303" }]
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "torch>=2.3",
    "transformers>=4.40",
    "bitsandbytes>=0.43",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "rank-bm25>=0.2.2",
    "groq>=0.9",
    "tabulate>=0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Optional extras. faiss accelerates dense search (NumPy fallback otherwise);
# datasets is only needed to fetch FinQA / WikiSQL.
faiss = ["faiss-cpu>=1.7"]
benchmarks = ["datasets>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["rag_agent"]
